Update print statement from 'Hello' to 'Goodbye'

--- a/march/index.html
+++ b/march/index.html
@@ -435,7 +435,7 @@
     <button class="modal-close" onclick="closeModal()">✕</button>
     <div class="photo-frame" id="photo-frame">
       
-      <img src="jiaxin.jpeg" alt="Friend" >
+      <img src="https://github.com/Kas-Sai/brd/blob/main/march/jiaxin.jpeg?raw=true" alt="Friend" >
     </div>
     <div class="modal-title">She's Magical ✨</div>
     <p class="modal-msg">
@@ -891,4 +891,5 @@ window.addEventListener('load', () => {
 });
 </script>
 </body>
+
 </html>
